Second commit day 9

--- a/index-START.html
+++ b/index-START.html
@@ -18,19 +18,20 @@
     }
 
     // Regular
-
+    console.log('hi');
     // Interpolated
-
+    console.log('Hi i am a %s string!', '🦈');
     // Styled
-
+    console.log('%c I am some great text', 'font-size: 50px; background: red;');
     // warning!
-
+    console.warn('Oh no!');
     // Error :|
-
+    console.error('Poop!');
     // Info
-
+    console.info('Crocodiles eat 3-4 people per year!');
     // Testing
-
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('ouch'), 'That is wrong!');
     // clearing
 
     // Viewing DOM Elements
