--- a/index-START.html
+++ b/index-START.html
@@ -33,15 +33,30 @@
     const p = document.querySelector('p');
     console.assert(p.classList.contains('ouch'), 'That is wrong!');
     // clearing
-
+    //console.clear();
     // Viewing DOM Elements
-
-    // Grouping together
-
+    console.dir(p);
+    // Grouping
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} in dog years`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
+    console.count('Brandon');
+    console.count('Brandon');
+    console.count('Brandon');
 
     // timing
-
+    console.time('fetching data');
+    fetch(`https://api.github.com/users/wesbos`)
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
   </script>
 </body>
 </html>
